kubernetes/reddit/comment-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-deployment
  labels:
    app: reddit
    component: comment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit
      component: comment
  template:
    metadata:
      name: comment-pod
      labels:
        app: reddit
        component: comment
    spec:
      containers:
        - image: dbarsukov/comment
          name: comment
