kubernetes/reddit/post-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deployment
  labels:
    app: reddit
    component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit
      component: post
  template:
    metadata:
      name: post-pod
      labels:
        app: reddit
        component: post
    spec:
      containers:
        - image: dbarsukov/post
          name: post
